--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,3 +91,20 @@ h2 {
 #rightbar {
     border-left: 0px solid black;
 }
+
+#reviewbutton {
+  overflow: hidden;
+  bottom: 0;
+  width: 10%;
+  margin: auto;
+}
+
+#reviewbutton2 {
+  border-radius: 10px 10px 10px 10px;
+  background-color: rgb(122, 201, 131);
+}
+
+#reviewbutton2:hover {
+  background-color: rgb(0, 94, 34);
+  color: white;
+}
